landing_style.css
/*DEFAULT & MISC SETTINGS*/

@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');

:root{
	--bgcolor: #fafafa;
	--navbarcolor: rgb(255, 255, 255, .95);
	--navlistcolor: rgb(250, 250, 250, 0);
	--txtcolor: rgb(252, 176, 92);
	--txtcoloralt: #fafafa;
	--boxcolor: #fdbe79;
}

html{
	scroll-behavior: smooth;
}
body{
	/*background-image: url("assets/bg.webp");*/
	background-color: var(--bgcolor);
	background-size: 96px;
	background-attachment: fixed;
	margin: 0 0;
	overflow: auto;
	overflow-x: hidden;
	min-height: 100dvh;
	display: grid;
	grid-template-rows: auto 1fr auto;
	grid-template-columns: minmax(0, 1fr) ;
}
br{
	user-select: none;
	-moz-user-select: none;
	-webkit-user-select: none;
}
.text-center{
	text-align: center;
}

.email{
	color: #ffff65;
	text-shadow: 0 0 16px #ffff65;
	transition-duration: 1000ms;
}
.email:hover{
	color: #ffff98;
	text-shadow: 0 0 16px #ffff98;
	transition-duration: 250ms;
}

#slogan{
	color: var(--txtcoloralt);
	font-family: 'Montserrat', monospace;
	font-size: 2em;
}
#slogan span{
	background-color: var(--bgcolor);
	border-radius: 25px;
	color: var(--txtcolor);
	padding: 10px 10px;
}
#snake{
	width: 30vw;
	height: 30vw;
	background-color: var(--bgcolor);
	border-radius: 100%;
	background-image: url("assets/snake.png");
	background-repeat: no-repeat;
	background-size: 70%;
	background-position: 400% 50%;
	animation: 1s cubic-bezier(0,.01,0,.99) 0s 1 normal both running snakeAnim;
}

#NameInfo p{
	position: relative;
}
#NameInfo p::before{
	font-weight: bold;
	position: absolute;
	content: "";
	padding: 5px 5px 5px 5px;
	--h: 10px;
	margin-left: 90px;
	margin-top: calc(var(--h)*.5);
	background-image: linear-gradient(to left, #ffd000, #ffff95);
	border-radius: 8px;
	z-index: 1;
	transition-duration: 500ms;
}
#NameInfo:hover p::before{
	opacity: 100%;
	padding: 10px 75px 20px 75px;
	--h: -10px;
	margin-left: 90px;
	margin-top: calc(var(--h)*.5);
	transition-duration: 250ms;
}

#NameInfo p::after{
	opacity: 0;
	font-weight: bold;
	font-size: 1em !important;
	position: absolute;
	content: "the Yellow Pin";
	padding: 5px 5px 5px 5px;
	--h: -10px;
	margin-left: 9px !important;
	margin-top: calc(var(--h)*.5);
	color: black;
	z-index: 1;
	transition-duration: 200ms;
}
#NameInfo:hover p::after{
	opacity: 100%;
	padding: 5px 15px 5px 15px;
	transition-duration: 400ms;
}

/* scrollbar */
::-webkit-scrollbar {
	width: auto;
}
::-webkit-scrollbar-track {
	background: #080808; 
}
::-webkit-scrollbar-thumb {
	border-radius: 25px;
	background: #fefefe; 
}
::-webkit-scrollbar-thumb:hover {
	background: #e5e5e4; 
}


/*NAVIGATION BAR*/
#navbar-container{
	position: fixed;
	width: 100%;
	background-color: var(--navbarcolor);
	backdrop-filter: blur(.25rem);
	box-shadow: 0px 0px 8px rgb(0, 0, 0, 0.25);
	z-index: 99999;
}
#navbar{
	font-family: 'Andale Mono', monospace;
	display: block;
    padding: 0;
    height: 64px;
    top: 0;
    left: 0;
    width: 100%;
	background-color: rgb(0,0,0,0);
	vertical-align: baseline;
	user-select: none;
	-moz-user-select: none;
	-webkit-user-select: none;
}

/*Web title*/
#title{
	display: inline;
	position: relative;
	top: 16px;
	left: 16px;
	color: var(--txtcolor);
	font-size: 1.75em;
	transition-duration: 700ms;
}
#title img{
	top: -10px;
	transition-duration: 700ms;
}
#title img:hover{
	transition-duration: 500ms;
	filter: drop-shadow(0 1.1px 0.6px var(--boxcolor));
}

/*Navigation button list*/
.navlist{
	display: inline;
	position: relative;
	float: right;
	right: 8px;
}
.navlist button{
	font-family: 'Andale Mono', monospace;
	margin: 4px 4px;
	position: relative;
	padding: 16px;
	font-size: 1.2em;
	background-color: var(--navlistcolor);
	border: none;
	color: var(--txtcolor);
	text-align: center;
	-webkit-user-drag: none;
	user-select: none;
	-moz-user-select: none;
	-webkit-user-select: none;
	transition-duration: 500ms;
}
.navlist button a{
	text-decoration: none;
	color: var(--txtcolor);
}
.navlist p{
	font-family: 'Andale Mono', monospace;
}
.navlist button:hover{
	cursor: pointer;
	transition-duration: 300ms;
	background-color: var(--boxcolor);
	color: var(--bgcolor);
}

/*WEB CONTENTS*/
#contents{
	display: block;
	color: var(--txtcolor);
	padding-top: 64px;
}
/*Headings*/
.heading{
	font-family: 'Open Sans', monospace;
	display: block;
	transition-duration: 700ms;
	text-align: center;
	color: var(--txtcolor);
	text-shadow: 0 0 50px rgb(255, 255, 255, 0);
	animation: 1s cubic-bezier(0,.01,0,.99) 0s 1 normal both running fadeIn;
}
.heading h1{
	font-size: 4em;
}
.heading h2{
	font-size: 3em;
}
.heading h3{
	font-size: 2em;
}
.heading:hover{
	transition-duration: 500ms;
	text-shadow: 0 0 50px rgb(255, 255, 255, .6);
}
/*Info card*/
/* card glow angle */
@property --glowAngle{
	syntax: "<angle>";
	initial-value: 0deg;
	inherits: false;
}
#info-card-container{
	animation: 1s cubic-bezier(0,.01,0,.99) 300ms 1 normal both running swipeIn;
}
/* container */
#slogan-container{
	width: 100%;
	height: 80vh;
	background-color: var(--boxcolor);
	color: var(--txtcoloralt) !important;
	display: flex;
	justify-content: center;
	flex-direction: row;
	align-items: center;
	vertical-align: baseline;
	gap: 2vw;
}
#info-card-container img{
	-webkit-user-drag: none;
	user-select: none;
	-moz-user-select: none;
	-webkit-user-select: none;
}
#info-card-container i{
	width: 16px;
	margin-right: 16px;
	text-align: center;
}
#project-card-container{
	/*
	display: flex;
	justify-content: center;
	flex-flow: row wrap;
	*/
	display: grid;
	grid-template-columns: repeat(auto-fit, 600px);
	justify-content: center;
	gap: 50px 20px;
	color: rgb(155, 155, 155, 1);
	-webkit-user-drag: none;
	user-select: none;
	-moz-user-select: none;
	-webkit-user-select: none;
}
#social-container{
	color: white;
	padding: 0;
	width: 100%;
	clear: both;
}
#project-card-container a{
	color: rgb(155, 155, 155, 1);
	text-decoration: none;
}
/* ... */

